--- a/server-docs/src/main/asciidoc/user-api-guide.adoc
+++ b/server-docs/src/main/asciidoc/user-api-guide.adoc
@@ -184,24 +184,24 @@ include::{snippets}/user-receipt-delete-example/http-response.adoc[]
 [[resources-user-receipt-feedback]]
 == User Receipt Feedback Resource
 
-Resource for user feedback to the receipt. Right now only has rating. TODO: add comment later.
+Resource for user feedback to the receipt.
 
 [[resources-user-receipt-feedback-update]]
-=== Update user feedback to the receipt
+=== Add user feedback to the receipt
 
-A `PUT` request is used to update user rating for the receipt
+A `POST` request is used to add user feedback for the receipt
 
 ==== Request structure
 
-include::{snippets}/user-receipt-feedback-update-example/request-fields.adoc[]
+include::{snippets}/user-receipt-feedback-create-example/request-fields.adoc[]
 
 ==== Example request
 
-include::{snippets}/user-receipt-feedback-update-example/curl-request.adoc[]
+include::{snippets}/user-receipt-feedback-create-example/curl-request.adoc[]
 
 ==== Example response
 
-include::{snippets}/user-receipt-feedback-update-example/http-response.adoc[]
+include::{snippets}/user-receipt-feedback-create-example/http-response.adoc[]
 
 
 
@@ -385,7 +385,7 @@ include::{snippets}/user-receipt-parser-result-item-update-example/http-response
 === Delete existing receipt parser result item
 
 A `DELETE` request is used to delete one receipt parser result item.
-TODO: it will just set ignore flag of the item, so user won't see it in the UI.
+It will just set ignore flag of the item, so user won't see it in the UI.
 
 ==== Example request
 
