--- a/server-docs/src/main/asciidoc/admin-api-guide.adoc
+++ b/server-docs/src/main/asciidoc/admin-api-guide.adoc
@@ -532,6 +532,19 @@ include::{snippets}/admin-receipt-feedback-retrieve-example/http-response.adoc[]
 
 include::{snippets}/admin-receipt-feedback-retrieve-example/links.adoc[]
 
+[[resources-admin-receipt-feedback-delete]]
+=== Delete admin-managed receipt feedback
+
+A `DELETE` request is used to delete admin-managed receipt feedback
+
+==== Example request
+
+include::{snippets}/admin-receipt-feedback-delete-example/curl-request.adoc[]
+
+==== Example response
+
+include::{snippets}/admin-receipt-feedback-delete-example/http-response.adoc[]
+
 
 
 [[resources-admin-store-chains]]
