--- a/server-docs/src/main/asciidoc/index.adoc
+++ b/server-docs/src/main/asciidoc/index.adoc
@@ -1,4 +1,4 @@
-= OpenPrice RESTful API Getting Started Guide
+= Openprice RESTful API Getting Started Guide
 Yuan Ji;
 :doctype: book
 :toc: left
@@ -8,7 +8,7 @@ Yuan Ji;
 [introduction]
 = Introduction
 
-OpenPrice API is a RESTful web service for managing user data and user's receipt data.
+Openprice API is a RESTful web service for managing user data and user's receipt data.
 It uses hypermedia to describe the relationships between resources and to allow navigation between them.
 
 [getting-started]
@@ -18,7 +18,7 @@ It uses hypermedia to describe the relationships between resources and to allow 
 
 [getting-started-running-the-service]
 == Running the service
-OpenPrice RESTful API is written using http://projects.spring.io/spring-boot[Spring Boot] which
+Openprice RESTful API is written using http://projects.spring.io/spring-boot[Spring Boot] which
 makes it easy to get it up and running so that you can start exploring the REST API.
 
 We have DEV environment for front-end developer to use for their Web and mobile app development.
